--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,1 @@
-src/engine/utils/moment.min.js
-src/engine/utils/moment.js
-src/engine/utils/regenerator.js
-src/engine/utils/tdweapp.js
+src/engine/utils/libs/**
